Fix overflowing body X-axis in Mobile; Improve hamburger button contrast and visibility in Mobile; Change color of header 'PENDEV' text  in Mobile

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -12,6 +12,7 @@ html {
 
 body {
   background-color: c.$background-color;
+  overflow-x: clip;
 }
 
 ul,
